[package]
name = "tokio_pw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
env_logger = "0.10.0"
error-stack = "0.3.1"
jni = { version = "0.21.1", features = ["invocation"]}
log = "0.4.17"
num_cpus = "1.15.0"
simple_logger = "4.1.0"
thiserror = "1.0.40"

[[bin]]
name="tokio_pw"
path="src/bin/jwrapper.rs"

[lib]
name="tokio_pw"
path="src/lib/lib.rs"
crate-type = ["cdylib"]
